# calculadora-de-dano

./: .flake8  .gitignore  README.md  deploy.sh  end2end-test.py  lambda_function.py  logging.conf  pyproject.toml
.github/workflows/: jobs.yml  main_workflow.yml  pytest.yml
service/: dice.py  main.py
tests/: attack_prob_test.py  attack_test.py  basic_test.py  damage_test.py  dice_test.py
