[tool.poetry]
name = "calculadora-de-dano"
version = "0.1.0"
description = ""
authors = ["Edinho"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=service"
testpaths = ["tests"]
log_level = "DEBUG"

[tool.black]
line-length = 79
