[tool.poetry]
name = "calculadora-de-dano"
version = "0.1.0"
description = ""
authors = ["Edinho"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest-flake8 = "^1.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=service"
testpaths = ["tests"]
log_level = "DEBUG"

[tool.black]
line-length = 79
